:sparkles: REI sandwich support