@@ -3,8 +3,11 @@ package io.github.coffeecatrailway.hamncheese.compat.forge.jei;
 import com.google.common.collect.Lists;
 import io.github.coffeecatrailway.hamncheese.common.item.AbstractSandwichItem;
 import io.github.coffeecatrailway.hamncheese.common.item.crafting.AbstractSandwichRecipe;
+import io.github.coffeecatrailway.hamncheese.compat.FoodPicker;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
+import mezz.jei.api.gui.ingredient.ICraftingGridHelper;
+import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.category.extensions.vanilla.crafting.ICraftingCategoryExtension;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.Tag;
@@ -16,7 +19,6 @@ import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * @author CoffeeCatRailway
@@ -38,10 +40,10 @@ public class SandwichCraftingExtension<T extends AbstractSandwichRecipe> impleme
     }
 
     @Override
-    public void setIngredients(IIngredients ingredients)
+    public void setRecipe(IRecipeLayoutBuilder builder, ICraftingGridHelper helper, IFocusGroup focuses)
     {
-        List<ItemStack> breadSlice = this.bunTag.getValues().stream().map(ItemStack::new).collect(Collectors.toList());
-        List<ItemStack> selected = FoodsGetter.pickFoods(7);
+        List<ItemStack> breadSlice = this.bunTag.getValues().stream().map(ItemStack::new).toList();
+        List<ItemStack> selected = FoodPicker.pickFoods(7);
         List<List<ItemStack>> inputs = new ArrayList<>();
 
         inputs.add(breadSlice);
@@ -50,11 +52,11 @@ public class SandwichCraftingExtension<T extends AbstractSandwichRecipe> impleme
         selected.forEach(stack -> inputs.add(Lists.newArrayList(stack)));
         if (this.hasTwoBuns)
             inputs.add(breadSlice);
-        ingredients.setInputLists(VanillaTypes.ITEM, inputs);
+        helper.setInputs(builder, VanillaTypes.ITEM, inputs, 3, 3);
 
         ItemStack sandwich = new ItemStack(this.defaultItem.get());
         selected.forEach(stack -> AbstractSandwichItem.addIngredient(sandwich, stack));
-        ingredients.setOutput(VanillaTypes.ITEM, sandwich);
+        helper.setOutputs(builder, VanillaTypes.ITEM, List.of(sandwich));
     }
 
     @Nullable
